Configuring heap memory